# sculptcore

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  gen_primes.js  index.html  serv.mjs
build_files/: WASM.cmake  emsdk_env.py  link_wasm.py  macros.cmake
source/: CMakeLists.txt
source/app/: CMakeLists.txt  app.cc
source/brush/: CMakeLists.txt  brush.cc  brush_iter.h  command.h  props.h
source/draw/: CMakeLists.txt
source/gpu/: CMakeLists.txt  batch.h  command.h  opengl.h  shader.cc  shader.h  standard_attrs.h  types.h  vbo.cc  vbo.h
source/io/: CMakeLists.txt  serial.h
source/math/: CMakeLists.txt  bspline.h  lut.h  matrix.h  mix.h  quat.h  vector.h
source/mesh/: CMakeLists.txt  attribute.h  attribute_base.h  attribute_bool.h  attribute_builtin.h  attribute_enums.h  elem_data.h  idmap.cc  idmap.h  mesh.cc  mesh.h  mesh_base.h  mesh_enums.h  mesh_iter.h  mesh_proxy.h  mesh_shapes.cc  mesh_shapes.h  mesh_types.cc  mesh_types.h
source/mesh/c-api/: mesh_c_api.cc
source/platform/: CMakeLists.txt  cpu.h  time.h  win32.cc
source/props/: CMakeLists.txt  curve_cache.cc  prop_coerce.h  prop_curve.h  prop_dynamics.h  prop_enums.h  prop_inherit.cc  prop_struct.cc  prop_struct.h  prop_types.h  props.cc  props.h
source/spatial/: CMakeLists.txt  node.h  spatial.cc  spatial.h  spatial_attrs.h  spatial_enums.h  spatial_gpu.cc
source/util/: CMakeLists.txt  alloc.cc  alloc.h  array.h  assert.h  boolvector.h  callback_list.h  compiler_util.h  concepts.h  function.h  hash.h  hashtable_sizes.h  index_range.h  map.h  memory.h  ordered_set.h  rand.h  set.h  span.h  string.cc  string.h  task.h  time.h  type_tags.h  vector.h
source/wasm/: jslib.js
source/window/: CMakeLists.txt  window.cc  window.h
tests/: CMakeLists.txt  test_boolvector.cc  test_brush.cc  test_function.cc  test_map.cc  test_math_vec.cc  test_matrix.cc  test_mesh.cc  test_props.cc  test_set.cc  test_shared_ptr.cc  test_task.cc  test_util.h  test_vector.cc
