macro(test file)
set(target "${file}_out")
add_executable(${target} "${file}")
target_link_libraries(${target} util)
target_include_directories(${target} PUBLIC util)
target_include_directories(${target} PUBLIC math)
target_include_directories(${target} PUBLIC mesh)
add_test(NAME ${target} COMMAND ${target})
endmacro()

test(test_vector.cc)
test(test_map.cc)
test(test_boolvector.cc)
test(test_math_vec.cc)
test(test_mesh.cc)
