macro(test file extra_lib)
set(target "${file}_out")
add_executable(${target} "${file}")
target_link_libraries(${target} util ${extra_lib} math platform)
target_include_directories(${target} PUBLIC util)
target_include_directories(${target} PUBLIC math)
target_include_directories(${target} PUBLIC mesh)
target_include_directories(${target} PUBLIC platform)
add_test(NAME ${target} COMMAND ${target})
endmacro()

test(test_boolvector.cc "")
test(test_function.cc "")
test(test_map.cc "")
test(test_math_vec.cc "")
test(test_matrix.cc "")
test(test_mesh.cc "mesh")
test(test_set.cc "")
test(test_task.cc "")
test(test_vector.cc "")
test(test_props.cc "props")
test(test_brush.cc "")
test(test_shared_ptr.cc "")
#test(test_constexpr_bug.cc "")
